crates/pcbc/tests/snapshots/info__board_without_pcb_toml.snap
---
source: crates/pcbc/tests/info.rs
expression: output
---
Command: pcbc info
Exit Code: 0

--- STDOUT ---
Workspace
Root: <TEMP_DIR>
Toolchain: pcb >= 0.3

Boards (1)
  TestBoard (unpublished) - boards/BoardWithToml/test_board.zen
    Main test board for validation
--- STDERR ---
