crates/pcbc/tests/snapshots/info__empty_workspace.snap
---
source: crates/pcb/tests/info.rs
expression: output
---
Command: pcbc info
Exit Code: 0

--- STDOUT ---
Workspace
Root: <TEMP_DIR>
Toolchain: pcb >= 0.3
Members: boards/*, special/custom-board

No boards discovered

Packages (1)
  root (unpublished) (workspace root)
--- STDERR ---
