crates/pcbc/tests/snapshots/info__json_format.snap
---
source: crates/pcbc/tests/info.rs
expression: output
---
Command: pcbc info -f json
Exit Code: 0

--- STDOUT ---
{
  "root": "<TEMP_DIR>",
  "config": {
    "workspace": {
      "pcb-version": "0.3",
      "members": [
        "boards/*",
        "special/custom-board"
      ]
    }
  },
  "packages": {
    "boards/main-board": {
      "rel_path": "boards/main-board",
      "config": {
        "board": {
          "name": "MainBoard",
          "path": "main_board.zen"
        }
      },
      "preferred": false,
      "dirty": true,
      "entrypoints": [
        "main_board.zen"
      ]
    },
    "boards/test-board": {
      "rel_path": "boards/test-board",
      "config": {
        "board": {
          "name": "TestBoard",
          "path": "test_board.zen",
          "description": "Main test board for validation"
        }
      },
      "preferred": false,
      "dirty": true,
      "entrypoints": [
        "test_board.zen"
      ]
    }
  }
}
--- STDERR ---
