crates/pcbc/tests/snapshots/info__json_format_with_preferred.snap
---
source: crates/pcbc/tests/info.rs
expression: output
---
Command: pcbc info -f json
Exit Code: 0

--- STDOUT ---
{
  "root": "<TEMP_DIR>",
  "config": {
    "workspace": {
      "pcb-version": "0.4",
      "preferred": [
        "boards/test-board"
      ]
    }
  },
  "packages": {
    "boards/main-board": {
      "rel_path": "boards/main-board",
      "source": "workspace",
      "board_entrypoint": "boards/main-board/main_board.zen",
      "tag_prefix": "boards/main-board/v",
      "config": {
        "board": {
          "name": "MainBoard",
          "path": "main_board.zen"
        }
      },
      "preferred": false,
      "dirty": true,
      "entrypoints": [
        "main_board.zen"
      ]
    },
    "boards/test-board": {
      "rel_path": "boards/test-board",
      "source": "workspace",
      "board_entrypoint": "boards/test-board/test_board.zen",
      "tag_prefix": "boards/test-board/v",
      "config": {
        "board": {
          "name": "TestBoard",
          "path": "test_board.zen",
          "description": "Main test board for validation"
        }
      },
      "preferred": true,
      "dirty": true,
      "entrypoints": [
        "test_board.zen"
      ]
    }
  }
}
--- STDERR ---
