crates/pcbc/tests/snapshots/info__json_format_with_published_at.snap
---
source: crates/pcbc/tests/info.rs
expression: normalized
---
Command: pcbc info -f json
Exit Code: 0

--- STDOUT ---
{
  "root": "<TEMP_DIR>",
  "config": {
    "workspace": {
      "pcb-version": "0.4"
    }
  },
  "packages": {
    "boards/test-board": {
      "version": "0.2.0",
      "rel_path": "boards/test-board",
      "source": "workspace",
      "board_entrypoint": "boards/test-board/test_board.zen",
      "tag_prefix": "boards/test-board/v",
      "config": {
        "board": {
          "name": "TestBoard",
          "path": "test_board.zen",
          "description": "Main test board for validation"
        }
      },
      "published_at": "<PUBLISHED_AT>",
      "preferred": false,
      "entrypoints": [
        "test_board.zen"
      ]
    }
  }
}
--- STDERR ---
