crates/pcbc/tests/snapshots/info__single_board.snap
---
source: crates/pcb/tests/info.rs
expression: output
---
Command: pcbc info
Exit Code: 0

--- STDOUT ---
Workspace
Root: <TEMP_DIR>
Toolchain: pcb >= 0.3
Members: boards/*, special/custom-board

Boards (1)
  TestBoard (unpublished) - boards/TestBoard/test_board.zen
    Main test board for validation
--- STDERR ---
